k8s/03-apps.yaml
# BACKEND
apiVersion: v1
kind: Service
metadata:
  name: backend-app
  namespace: insurance-ns
spec:
  ports:
    - port: 8080
  selector:
    app: backend-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
  namespace: insurance-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
        - name: backend-app
          image: ghcr.io/GHCR_IMAGE_OWNER/insurance-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15

# NOTIFICATION SERVICE
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: insurance-ns
spec:
  ports:
    - port: 8081
  selector:
    app: notification-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: insurance-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: ghcr.io/GHCR_IMAGE_OWNER/insurance-notification:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 15

# PAYMENTS
---
apiVersion: v1
kind: Service
metadata:
  name: payments-service
  namespace: insurance-ns
spec:
  ports:
    - port: 7777
  selector:
    app: payments-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-service
  namespace: insurance-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-service
  template:
    metadata:
      labels:
        app: payments-service
    spec:
      containers:
        - name: payments-service
          image: ghcr.io/GHCR_IMAGE_OWNER/insurance-payments:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7777
          livenessProbe:
            httpGet:
              path: /health
              port: 7777
            initialDelaySeconds: 60
            periodSeconds: 15
