k8s/05-https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: insurance-ingress
  namespace: insurance-ns
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "insurance-global-ip"
    networking.gke.io/managed-certificates: "insurance-ssl-cert"
    networking.gke.io/v1beta1.FrontendConfig: "ingress-security-config"
spec:
  rules:
    - host: "136.110.148.95.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
